[gd_scene load_steps=14 format=2]

[ext_resource path="res://images/backgrounds/menu.png" type="Texture" id=1]
[ext_resource path="res://images/scroll/scroll_open_1.png" type="Texture" id=2]
[ext_resource path="res://fonts/default.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/ItemBar.gd" type="Script" id=4]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 3 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BackgroundItems" type="Node2D" parent="."]

[node name="Cave" type="Sprite" parent="BackgroundItems"]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="Scroll" type="Sprite" parent="BackgroundItems"]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="BackgroundItems"]
margin_top = 25.0
margin_right = 1024.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1

[node name="MusicEdit" type="Control" parent="."]
margin_left = 200.0
margin_top = 140.0
margin_right = 240.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="MusicEdit"]
margin_right = 150.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Music"

[node name="Slider" type="HSlider" parent="MusicEdit"]
margin_left = 160.0
margin_right = 480.0
margin_bottom = 40.0

[node name="Value" type="Label" parent="MusicEdit"]
margin_left = 500.0
margin_right = 540.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 7 )
text = "100"

[node name="SoundEdit" type="Control" parent="."]
margin_left = 200.0
margin_top = 190.0
margin_right = 240.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="SoundEdit"]
margin_right = 150.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Sound"

[node name="Slider" type="HSlider" parent="SoundEdit"]
margin_left = 160.0
margin_right = 480.0
margin_bottom = 40.0

[node name="Value" type="Label" parent="SoundEdit"]
margin_left = 500.0
margin_right = 540.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "100"

[node name="LangEdit" type="Control" parent="."]
margin_left = 200.0
margin_top = 240.0
margin_right = 240.0
margin_bottom = 280.0

[node name="Label" type="Label" parent="LangEdit"]
margin_right = 150.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Language"

[node name="ItemBar" type="OptionButton" parent="LangEdit"]
margin_left = 160.0
margin_right = 480.0
margin_bottom = 40.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
flat = true
script = ExtResource( 4 )

[connection signal="value_changed" from="MusicEdit/Slider" to="." method="_on_Music_changed"]
[connection signal="value_changed" from="SoundEdit/Slider" to="." method="_on_Sound_changed"]
[connection signal="item_selected" from="LangEdit/ItemBar" to="." method="_on_item_selected"]
